@@ -22,6 +22,7 @@ import com.rabbitmq.client.GetResponse;
 import org.apache.nifi.amqp.processors.PublishAMQP.InputHeaderSource;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.Test;
@@ -32,6 +33,7 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ExecutorService;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -40,10 +42,11 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class PublishAMQPTest {
 
+    private final LocalPublishAMQP pubProc = new LocalPublishAMQP();
+    private final TestRunner runner = TestRunners.newTestRunner(pubProc);
+
     @Test
     public void validateSuccessfulPublishAndTransferToSuccess() throws Exception {
-        final PublishAMQP pubProc = new LocalPublishAMQP();
-        final TestRunner runner = TestRunners.newTestRunner(pubProc);
         setConnectionProperties(runner);
 
         final Map<String, String> expectedHeaders = new HashMap<>();
@@ -72,10 +75,10 @@ public class PublishAMQPTest {
 
         runner.run();
 
-        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).get(0);
+        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).getFirst();
         assertNotNull(successFF);
 
-        final Channel channel = ((LocalPublishAMQP) pubProc).getConnection().createChannel();
+        final Channel channel = pubProc.getConnection().createChannel();
         final GetResponse msg1 = channel.basicGet("queue1", true);
         assertNotNull(msg1);
         assertEquals("foo/bar", msg1.getProps().getContentType());
@@ -102,8 +105,6 @@ public class PublishAMQPTest {
 
     @Test
     public void validateSuccessWithHeaderWithCommaPublishToSuccess() throws Exception {
-        final PublishAMQP pubProc = new LocalPublishAMQP();
-        final TestRunner runner = TestRunners.newTestRunner(pubProc);
         setConnectionProperties(runner);
         runner.setProperty(PublishAMQP.HEADER_SEPARATOR, "|");
 
@@ -119,10 +120,10 @@ public class PublishAMQPTest {
 
         runner.run();
 
-        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).get(0);
+        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).getFirst();
         assertNotNull(successFF);
 
-        final Channel channel = ((LocalPublishAMQP) pubProc).getConnection().createChannel();
+        final Channel channel = pubProc.getConnection().createChannel();
         final GetResponse msg1 = channel.basicGet("queue1", true);
         assertNotNull(msg1);
 
@@ -135,16 +136,12 @@ public class PublishAMQPTest {
 
     @Test
     public void validateWithNotValidHeaderSeparatorParameter() {
-        final PublishAMQP pubProc = new LocalPublishAMQP();
-        final TestRunner runner = TestRunners.newTestRunner(pubProc);
         runner.setProperty(PublishAMQP.HEADER_SEPARATOR, "|,");
         runner.assertNotValid();
     }
 
     @Test
     public void validateMalformedHeaderIgnoredAndPublishToSuccess() throws Exception {
-        final PublishAMQP pubProc = new LocalPublishAMQP();
-        final TestRunner runner = TestRunners.newTestRunner(pubProc);
         setConnectionProperties(runner);
         runner.setProperty(PublishAMQP.HEADER_SEPARATOR, "|");
 
@@ -161,10 +158,10 @@ public class PublishAMQPTest {
 
         runner.run();
 
-        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).get(0);
+        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).getFirst();
         assertNotNull(successFF);
 
-        final Channel channel = ((LocalPublishAMQP) pubProc).getConnection().createChannel();
+        final Channel channel = pubProc.getConnection().createChannel();
         final GetResponse msg1 = channel.basicGet("queue1", true);
         assertNotNull(msg1);
 
@@ -177,8 +174,6 @@ public class PublishAMQPTest {
 
     @Test
     public void validateFailedPublishAndTransferToFailure() {
-        PublishAMQP pubProc = new LocalPublishAMQP();
-        TestRunner runner = TestRunners.newTestRunner(pubProc);
         setConnectionProperties(runner);
         runner.setProperty(PublishAMQP.EXCHANGE, "nonExistentExchange");
 
@@ -187,13 +182,11 @@ public class PublishAMQPTest {
         runner.run();
 
         assertTrue(runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).isEmpty());
-        assertNotNull(runner.getFlowFilesForRelationship(PublishAMQP.REL_FAILURE).get(0));
+        assertNotNull(runner.getFlowFilesForRelationship(PublishAMQP.REL_FAILURE).getFirst());
     }
 
     @Test
     public void validateSuccessWithHeaderFromAttributeRegexToSuccess() throws Exception {
-        final PublishAMQP pubProc = new LocalPublishAMQP();
-        final TestRunner runner = TestRunners.newTestRunner(pubProc);
         setConnectionProperties(runner);
         runner.setProperty(PublishAMQP.HEADERS_SOURCE, InputHeaderSource.FLOWFILE_ATTRIBUTES);
         runner.setProperty(PublishAMQP.HEADERS_PATTERN, "test.*|tmp\\..*|foo2|foo3");
@@ -220,10 +213,10 @@ public class PublishAMQPTest {
 
         runner.run();
 
-        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).get(0);
+        final MockFlowFile successFF = runner.getFlowFilesForRelationship(PublishAMQP.REL_SUCCESS).getFirst();
         assertNotNull(successFF);
 
-        final Channel channel = ((LocalPublishAMQP) pubProc).getConnection().createChannel();
+        final Channel channel = pubProc.getConnection().createChannel();
         final GetResponse msg1 = channel.basicGet("queue1", true);
         assertNotNull(msg1);
 
@@ -236,12 +229,28 @@ public class PublishAMQPTest {
 
     @Test
     public void validateWithNotValidRegexForAttributeMatch() {
-        final PublishAMQP pubProc = new LocalPublishAMQP();
-        final TestRunner runner = TestRunners.newTestRunner(pubProc);
         setConnectionProperties(runner);
         runner.setProperty(PublishAMQP.HEADERS_SOURCE, InputHeaderSource.FLOWFILE_ATTRIBUTES);
         runner.setProperty(PublishAMQP.HEADERS_PATTERN, "*");
         runner.assertNotValid();
+    }
+
+    @Test
+    void testMigration() {
+        final TestRunner runner = TestRunners.newTestRunner(PublishAMQP.class);
+        setConnectionProperties(runner);
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("User Name", AbstractAMQPProcessor.USER.getName()),
+                Map.entry("ssl-context-service", AbstractAMQPProcessor.SSL_CONTEXT_SERVICE.getName()),
+                Map.entry("cert-authentication", AbstractAMQPProcessor.CLIENT_CERTIFICATE_AUTHENTICATION_ENABLED.getName()),
+                Map.entry("header.separator", PublishAMQP.HEADER_SEPARATOR.getName())
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
+
+        final Set<String> expectedRemoved = Set.of("ssl-client-auth");
+        assertEquals(expectedRemoved, propertyMigrationResult.getPropertiesRemoved());
     }
 
     private void setConnectionProperties(TestRunner runner) {
