@@ -17,9 +17,49 @@
 
 package org.apache.nifi.processors.box;
 
+import com.box.sdk.BoxAPIConnection;
+import com.box.sdk.BoxAPIException;
+import com.box.sdk.BoxAPIResponseException;
+import com.box.sdk.BoxFile;
+import com.box.sdk.BoxFolder;
+import com.box.sdk.BoxItem;
+import org.apache.nifi.annotation.behavior.InputRequirement;
+import org.apache.nifi.annotation.behavior.InputRequirement.Requirement;
+import org.apache.nifi.annotation.behavior.ReadsAttribute;
+import org.apache.nifi.annotation.behavior.WritesAttribute;
+import org.apache.nifi.annotation.behavior.WritesAttributes;
+import org.apache.nifi.annotation.documentation.CapabilityDescription;
+import org.apache.nifi.annotation.documentation.SeeAlso;
+import org.apache.nifi.annotation.documentation.Tags;
+import org.apache.nifi.annotation.lifecycle.OnScheduled;
+import org.apache.nifi.box.controllerservices.BoxClientService;
+import org.apache.nifi.components.PropertyDescriptor;
+import org.apache.nifi.expression.ExpressionLanguageScope;
+import org.apache.nifi.flowfile.FlowFile;
+import org.apache.nifi.migration.PropertyConfiguration;
+import org.apache.nifi.processor.DataUnit;
+import org.apache.nifi.processor.ProcessContext;
+import org.apache.nifi.processor.ProcessSession;
+import org.apache.nifi.processor.Relationship;
+import org.apache.nifi.processor.exception.ProcessException;
+import org.apache.nifi.processor.util.StandardValidators;
+import org.apache.nifi.processors.conflict.resolution.ConflictResolutionStrategy;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.Collections;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Queue;
+import java.util.Set;
+import java.util.concurrent.TimeUnit;
+import java.util.regex.Pattern;
+import java.util.stream.StreamSupport;
+
 import static java.lang.String.format;
 import static java.lang.String.valueOf;
-import static java.util.Arrays.asList;
 import static org.apache.nifi.processor.util.StandardValidators.createRegexMatchingValidator;
 import static org.apache.nifi.processors.box.BoxFileAttributes.ERROR_CODE;
 import static org.apache.nifi.processors.box.BoxFileAttributes.ERROR_CODE_DESC;
@@ -37,48 +77,6 @@ import static org.apache.nifi.processors.box.BoxFileUtils.BOX_URL;
 import static org.apache.nifi.processors.conflict.resolution.ConflictResolutionStrategy.IGNORE;
 import static org.apache.nifi.processors.conflict.resolution.ConflictResolutionStrategy.REPLACE;
 
-import com.box.sdk.BoxAPIConnection;
-import com.box.sdk.BoxAPIException;
-import com.box.sdk.BoxAPIResponseException;
-import com.box.sdk.BoxFile;
-import com.box.sdk.BoxFolder;
-import com.box.sdk.BoxItem;
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Queue;
-import java.util.Set;
-import java.util.concurrent.TimeUnit;
-import java.util.regex.Pattern;
-import java.util.stream.StreamSupport;
-import org.apache.nifi.annotation.behavior.InputRequirement;
-import org.apache.nifi.annotation.behavior.InputRequirement.Requirement;
-import org.apache.nifi.annotation.behavior.ReadsAttribute;
-import org.apache.nifi.annotation.behavior.WritesAttribute;
-import org.apache.nifi.annotation.behavior.WritesAttributes;
-import org.apache.nifi.annotation.documentation.CapabilityDescription;
-import org.apache.nifi.annotation.documentation.SeeAlso;
-import org.apache.nifi.annotation.documentation.Tags;
-import org.apache.nifi.annotation.lifecycle.OnScheduled;
-import org.apache.nifi.box.controllerservices.BoxClientService;
-import org.apache.nifi.components.PropertyDescriptor;
-import org.apache.nifi.expression.ExpressionLanguageScope;
-import org.apache.nifi.flowfile.FlowFile;
-import org.apache.nifi.processor.AbstractProcessor;
-import org.apache.nifi.processor.DataUnit;
-import org.apache.nifi.processor.ProcessContext;
-import org.apache.nifi.processor.ProcessSession;
-import org.apache.nifi.processor.Relationship;
-import org.apache.nifi.processor.exception.ProcessException;
-import org.apache.nifi.processor.util.StandardValidators;
-import org.apache.nifi.processors.conflict.resolution.ConflictResolutionStrategy;
-
-
 @SeeAlso({ListBoxFile.class, FetchBoxFile.class})
 @InputRequirement(Requirement.INPUT_REQUIRED)
 @Tags({"box", "storage", "put"})
@@ -92,7 +90,7 @@ import org.apache.nifi.processors.conflict.resolution.ConflictResolutionStrategy
         @WritesAttribute(attribute = TIMESTAMP, description = TIMESTAMP_DESC),
         @WritesAttribute(attribute = ERROR_CODE, description = ERROR_CODE_DESC),
         @WritesAttribute(attribute = ERROR_MESSAGE, description = ERROR_MESSAGE_DESC)})
-public class PutBoxFile extends AbstractProcessor {
+public class PutBoxFile extends AbstractBoxProcessor {
     public static final int CHUNKED_UPLOAD_LOWER_LIMIT_IN_BYTES = 20 * 1024 * 1024;
     public static final int CHUNKED_UPLOAD_UPPER_LIMIT_IN_BYTES = 50 * 1024 * 1024;
 
@@ -100,8 +98,7 @@ public class PutBoxFile extends AbstractProcessor {
     public static final int WAIT_TIME_MS = 1000;
 
     public static final PropertyDescriptor FOLDER_ID = new PropertyDescriptor.Builder()
-            .name("box-folder-id")
-            .displayName("Folder ID")
+            .name("Folder ID")
             .description("The ID of the folder where the file is uploaded." +
             " Please see Additional Details to obtain Folder ID.")
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
@@ -110,8 +107,7 @@ public class PutBoxFile extends AbstractProcessor {
             .build();
 
     public static final PropertyDescriptor FILE_NAME = new PropertyDescriptor.Builder()
-            .name("file-name")
-            .displayName("Filename")
+            .name("Filename")
             .description("The name of the file to upload to the specified Box folder.")
             .required(true)
             .defaultValue("${filename}")
@@ -120,8 +116,7 @@ public class PutBoxFile extends AbstractProcessor {
             .build();
 
     public static final PropertyDescriptor SUBFOLDER_NAME = new PropertyDescriptor.Builder()
-            .name("subfolder-name")
-            .displayName("Subfolder Name")
+            .name("Subfolder Name")
             .description("The name (path) of the subfolder where files are uploaded. The subfolder name is relative to the folder specified by 'Folder ID'."
                     + " Example: subFolder, subFolder1/subfolder2")
             .addValidator(createRegexMatchingValidator(Pattern.compile("^(?!/).+(?<!/)$"), false,
@@ -131,8 +126,7 @@ public class PutBoxFile extends AbstractProcessor {
             .build();
 
     public static final PropertyDescriptor CREATE_SUBFOLDER = new PropertyDescriptor.Builder()
-            .name("create-folder")
-            .displayName("Create Subfolder")
+            .name("Create Subfolder")
             .expressionLanguageSupported(ExpressionLanguageScope.NONE)
             .required(true)
             .addValidator(StandardValidators.BOOLEAN_VALIDATOR)
@@ -144,8 +138,7 @@ public class PutBoxFile extends AbstractProcessor {
             .build();
 
     public static final PropertyDescriptor CONFLICT_RESOLUTION = new PropertyDescriptor.Builder()
-            .name("conflict-resolution-strategy")
-            .displayName("Conflict Resolution Strategy")
+            .name("Conflict Resolution Strategy")
             .description("Indicates what should happen when a file with the same name already exists in the specified Box folder.")
             .required(true)
             .defaultValue(ConflictResolutionStrategy.FAIL.getValue())
@@ -153,8 +146,7 @@ public class PutBoxFile extends AbstractProcessor {
             .build();
 
     public static final PropertyDescriptor CHUNKED_UPLOAD_THRESHOLD = new PropertyDescriptor.Builder()
-            .name("chunked-upload-threshold")
-            .displayName("Chunked Upload Threshold")
+            .name("Chunked Upload Threshold")
             .description("The maximum size of the content which is uploaded at once. FlowFiles larger than this threshold are uploaded in chunks."
                     + " Chunked upload is allowed for files larger than 20 MB. It is recommended to use chunked upload for files exceeding 50 MB.")
             .defaultValue("20 MB")
@@ -162,15 +154,15 @@ public class PutBoxFile extends AbstractProcessor {
             .required(false)
             .build();
 
-    public static final List<PropertyDescriptor> PROPERTIES = Collections.unmodifiableList(asList(
-            BoxClientService.BOX_CLIENT_SERVICE,
+    public static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
+            BOX_CLIENT_SERVICE,
             FOLDER_ID,
             SUBFOLDER_NAME,
             CREATE_SUBFOLDER,
             FILE_NAME,
             CONFLICT_RESOLUTION,
             CHUNKED_UPLOAD_THRESHOLD
-    ));
+    );
 
     public static final Relationship REL_SUCCESS =
             new Relationship.Builder()
@@ -184,10 +176,10 @@ public class PutBoxFile extends AbstractProcessor {
                     .description("Files that could not be written to Box for some reason are transferred to this relationship.")
                     .build();
 
-    public static final Set<Relationship> RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(asList(
+    public static final Set<Relationship> RELATIONSHIPS = Set.of(
             REL_SUCCESS,
             REL_FAILURE
-    )));
+    );
 
     private static final int CONFLICT_RESPONSE_CODE = 409;
     private static final int NOT_FOUND_RESPONSE_CODE = 404;
@@ -201,12 +193,12 @@ public class PutBoxFile extends AbstractProcessor {
 
     @Override
     public List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return PROPERTIES;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @OnScheduled
     public void onScheduled(final ProcessContext context) {
-        final BoxClientService boxClientService = context.getProperty(BoxClientService.BOX_CLIENT_SERVICE).asControllerService(BoxClientService.class);
+        final BoxClientService boxClientService = context.getProperty(BOX_CLIENT_SERVICE).asControllerService(BoxClientService.class);
 
         boxAPIConnection = boxClientService.getBoxApiConnection();
     }
@@ -240,7 +232,7 @@ public class PutBoxFile extends AbstractProcessor {
                 }
 
                 if (uploadedFileInfo == null) {
-                   uploadedFileInfo = createBoxFile(parentFolder, filename, rawIn, size, chunkUploadThreshold);
+                    uploadedFileInfo = createBoxFile(parentFolder, filename, rawIn, size, chunkUploadThreshold);
                 }
             } catch (BoxAPIResponseException e) {
                 if (e.getResponseCode() == CONFLICT_RESPONSE_CODE) {
@@ -268,17 +260,29 @@ public class PutBoxFile extends AbstractProcessor {
         }
     }
 
+    @Override
+    public void migrateProperties(PropertyConfiguration config) {
+        super.migrateProperties(config);
+        config.renameProperty("box-folder-id", FOLDER_ID.getName());
+        config.renameProperty("file-name", FILE_NAME.getName());
+        config.renameProperty("subfolder-name", SUBFOLDER_NAME.getName());
+        config.renameProperty("create-folder", CREATE_SUBFOLDER.getName());
+        config.renameProperty("conflict-resolution-strategy", CONFLICT_RESOLUTION.getName());
+        config.renameProperty("chunked-upload-threshold", CHUNKED_UPLOAD_THRESHOLD.getName());
+    }
+
     BoxFolder getFolder(String folderId) {
         return new BoxFolder(boxAPIConnection, folderId);
     }
 
-    private BoxFolder getOrCreateDirectParentFolder(ProcessContext context, FlowFile flowFile ) {
+    private BoxFolder getOrCreateDirectParentFolder(ProcessContext context, FlowFile flowFile) {
         final String subfolderPath = context.getProperty(SUBFOLDER_NAME).evaluateAttributeExpressions(flowFile).getValue();
-        final boolean createFolder = context.getProperty(CREATE_SUBFOLDER).asBoolean();
         final String folderId = context.getProperty(FOLDER_ID).evaluateAttributeExpressions(flowFile).getValue();
         BoxFolder parentFolder = getFolderById(folderId);
 
         if (subfolderPath != null) {
+            final boolean createFolder = context.getProperty(CREATE_SUBFOLDER).asBoolean();
+
             final Queue<String> subFolderNames = getSubFolderNames(subfolderPath);
             parentFolder = getOrCreateSubfolders(subFolderNames, parentFolder, createFolder);
         }
@@ -320,7 +324,7 @@ public class PutBoxFile extends AbstractProcessor {
         final BoxFolder newParentFolder = getOrCreateFolder(subFolderNames.poll(), parentFolder, createFolder);
 
         if (!subFolderNames.isEmpty()) {
-           return getOrCreateSubfolders(subFolderNames, newParentFolder, createFolder);
+            return getOrCreateSubfolders(subFolderNames, newParentFolder, createFolder);
         } else {
             return newParentFolder;
         }
@@ -334,8 +338,8 @@ public class PutBoxFile extends AbstractProcessor {
         }
 
         if (!createFolder) {
-           throw new ProcessException(format("The specified subfolder [%s] does not exist and [%s] is false.",
-                   folderName, CREATE_SUBFOLDER.getDisplayName()));
+            throw new ProcessException(format("The specified subfolder [%s] does not exist and [%s] is false.",
+                    folderName, CREATE_SUBFOLDER.getDisplayName()));
         }
 
         return createFolder(folderName, parentFolder);
@@ -345,7 +349,7 @@ public class PutBoxFile extends AbstractProcessor {
         getLogger().info("Creating Folder [{}], Parent [{}]", folderName, parentFolder.getID());
 
         try {
-           return parentFolder.createFolder(folderName).getResource();
+            return parentFolder.createFolder(folderName).getResource();
         } catch (BoxAPIResponseException e) {
             if (e.getResponseCode() != CONFLICT_RESPONSE_CODE) {
                 throw e;
@@ -361,7 +365,7 @@ public class PutBoxFile extends AbstractProcessor {
         try {
             Optional<BoxFolder> createdFolder = getFolderByName(folderName, parentFolder);
 
-            for (int i = 0; i < NUMBER_OF_RETRIES && !createdFolder.isPresent(); i++) {
+            for (int i = 0; i < NUMBER_OF_RETRIES && createdFolder.isEmpty(); i++) {
                 getLogger().debug("Subfolder [{}] under [{}] has not been created yet, waiting {} ms",
                         folderName, parentFolder.getID(), WAIT_TIME_MS);
                 Thread.sleep(WAIT_TIME_MS);
