@@ -32,8 +32,6 @@ import org.apache.nifi.parameter.VerifiableParameterProvider;
 import org.apache.nifi.processor.util.StandardValidators;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -81,24 +79,22 @@ public class HashiCorpVaultParameterProvider extends AbstractParameterProvider i
             .defaultValue(".*")
             .build();
 
-    private static final List<PropertyDescriptor> PROPERTIES = Collections.unmodifiableList(Arrays.asList(
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             VAULT_CLIENT_SERVICE,
             KV_PATH,
             KV_VERSION,
-            SECRET_NAME_PATTERN));
-
-    private HashiCorpVaultCommunicationService vaultCommunicationService;
+            SECRET_NAME_PATTERN
+    );
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return PROPERTIES;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @Override
     public List<ParameterGroup> fetchParameters(final ConfigurationContext context) {
-        if (vaultCommunicationService == null) {
-            vaultCommunicationService = getVaultCommunicationService(context);
-        }
+        // Always get fresh communication service to ensure configuration changes are reflected
+        final HashiCorpVaultCommunicationService vaultCommunicationService = getVaultCommunicationService(context);
 
         final List<ParameterGroup> parameterGroups = getParameterGroups(vaultCommunicationService, context);
         return parameterGroups;
@@ -118,7 +114,7 @@ public class HashiCorpVaultParameterProvider extends AbstractParameterProvider i
         for (final String secretName : secretNames) {
             final Map<String, String> keyValues = vaultCommunicationService.readKeyValueSecretMap(kvPath, secretName, kvVersion);
             final List<Parameter> parameters = new ArrayList<>();
-            keyValues.forEach( (key, value) -> {
+            keyValues.forEach((key, value) -> {
                 parameters.add(new Parameter.Builder()
                         .name(key)
                         .value(value)
@@ -136,13 +132,6 @@ public class HashiCorpVaultParameterProvider extends AbstractParameterProvider i
                 .collect(Collectors.toList());
         getLogger().info("Fetched parameter groups {}, containing a total of {} parameters", parameterGroupNames, parameterCount);
         return parameterGroups;
-    }
-
-    @Override
-    public void onPropertyModified(final PropertyDescriptor descriptor, final String oldValue, final String newValue) {
-        if (VAULT_CLIENT_SERVICE.equals(descriptor)) {
-            vaultCommunicationService = null;
-        }
     }
 
     @Override
