@@ -36,6 +36,7 @@ import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.ProcessorInitializationContext;
@@ -64,14 +65,12 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -86,7 +85,6 @@ import static org.apache.nifi.processors.mqtt.ConsumeMQTT.TOPIC_ATTRIBUTE_KEY;
 import static org.apache.nifi.processors.mqtt.common.MqttConstants.ALLOWABLE_VALUE_QOS_0;
 import static org.apache.nifi.processors.mqtt.common.MqttConstants.ALLOWABLE_VALUE_QOS_1;
 import static org.apache.nifi.processors.mqtt.common.MqttConstants.ALLOWABLE_VALUE_QOS_2;
-
 
 @Tags({"subscribe", "MQTT", "IOT", "consume", "listen"})
 @InputRequirement(InputRequirement.Requirement.INPUT_FORBIDDEN)
@@ -105,23 +103,26 @@ import static org.apache.nifi.processors.mqtt.common.MqttConstants.ALLOWABLE_VAL
         + "instance of this processor. A high value for this property could represent a lot of data being stored in memory.")
 public class ConsumeMQTT extends AbstractMQTTProcessor {
 
-    public final static String RECORD_COUNT_KEY = "record.count";
-    public final static String BROKER_ATTRIBUTE_KEY = "mqtt.broker";
-    public final static String TOPIC_ATTRIBUTE_KEY = "mqtt.topic";
-    public final static String QOS_ATTRIBUTE_KEY = "mqtt.qos";
-    public final static String IS_DUPLICATE_ATTRIBUTE_KEY = "mqtt.isDuplicate";
-    public final static String IS_RETAINED_ATTRIBUTE_KEY = "mqtt.isRetained";
+    public static final String RECORD_COUNT_KEY = "record.count";
+    public static final String BROKER_ATTRIBUTE_KEY = "mqtt.broker";
+    public static final String TOPIC_ATTRIBUTE_KEY = "mqtt.topic";
+    public static final String TOPIC_SEGMENT_PREFIX = "mqtt.topic.segment.";
+    public static final String TOPIC_SEPARATOR = "/";
+    public static final String QOS_ATTRIBUTE_KEY = "mqtt.qos";
+    public static final String IS_DUPLICATE_ATTRIBUTE_KEY = "mqtt.isDuplicate";
+    public static final String IS_RETAINED_ATTRIBUTE_KEY = "mqtt.isRetained";
 
-    public final static String TOPIC_FIELD_KEY = "_topic";
-    public final static String QOS_FIELD_KEY = "_qos";
-    public final static String IS_DUPLICATE_FIELD_KEY = "_isDuplicate";
-    public final static String IS_RETAINED_FIELD_KEY = "_isRetained";
+    public static final String TOPIC_FIELD_KEY = "_topic";
+    public static final String TOPIC_SEGMENTS_FIELD_KEY = "_topicSegments";
+    public static final String QOS_FIELD_KEY = "_qos";
+    public static final String IS_DUPLICATE_FIELD_KEY = "_isDuplicate";
+    public static final String IS_RETAINED_FIELD_KEY = "_isRetained";
 
-    private final static String COUNTER_PARSE_FAILURES = "Parse Failures";
-    private final static String COUNTER_RECORDS_RECEIVED = "Records Received";
-    private final static String COUNTER_RECORDS_PROCESSED = "Records Processed";
+    private static final String COUNTER_PARSE_FAILURES = "Parse Failures";
+    private static final String COUNTER_RECORDS_RECEIVED = "Records Received";
+    private static final String COUNTER_RECORDS_PROCESSED = "Records Processed";
 
-    private final static int MAX_MESSAGES_PER_FLOW_FILE = 10000;
+    private static final int MAX_MESSAGES_PER_FLOW_FILE = 10000;
 
     public static final PropertyDescriptor PROP_GROUPID = new PropertyDescriptor.Builder()
             .name("Group ID")
@@ -139,8 +140,7 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
             .build();
 
     public static final PropertyDescriptor PROP_QOS = new PropertyDescriptor.Builder()
-            .name("Quality of Service(QoS)")
-            .displayName("Quality of Service (QoS)")
+            .name("Quality of Service")
             .description("The Quality of Service (QoS) to receive the message with. Accepts values '0', '1' or '2'; '0' for 'at most once', '1' for 'at least once', '2' for 'exactly once'.")
             .required(true)
             .defaultValue(ALLOWABLE_VALUE_QOS_0.getValue())
@@ -179,8 +179,7 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
             .build();
 
     public static final PropertyDescriptor ADD_ATTRIBUTES_AS_FIELDS = new PropertyDescriptor.Builder()
-            .name("add-attributes-as-fields")
-            .displayName("Add attributes as fields")
+            .name("Add Attributes as Fields")
             .description("If setting this property to true, default fields "
                     + "are going to be added in each record: _topic, _qos, _isDuplicate, _isRetained.")
             .required(true)
@@ -195,7 +194,7 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
     private volatile String topicFilter;
     private final AtomicBoolean scheduled = new AtomicBoolean(false);
 
-    private volatile LinkedBlockingQueue<ReceivedMqttMessage> mqttQueue;
+    private volatile BlockingQueue<ReceivedMqttMessage> mqttQueue;
 
     public static final Relationship REL_MESSAGE = new Relationship.Builder()
             .name("Message")
@@ -209,7 +208,7 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
             .autoTerminateDefault(true) // to make sure flow are still valid after upgrades
             .build();
 
-    private static final List<PropertyDescriptor> PROPERTIES = Collections.unmodifiableList(Arrays.asList(
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             PROP_BROKER_URI,
             PROP_MQTT_VERSION,
             PROP_USERNAME,
@@ -232,12 +231,12 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
             PROP_LAST_WILL_RETAIN,
             PROP_LAST_WILL_QOS,
             PROP_MAX_QUEUE_SIZE
-    ));
+    );
 
-    private static final Set<Relationship> RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final Set<Relationship> RELATIONSHIPS = Set.of(
             REL_MESSAGE,
             REL_PARSE_FAILURE
-    )));
+    );
 
     @Override
     public void onPropertyModified(PropertyDescriptor descriptor, String oldValue, String newValue) {
@@ -251,7 +250,7 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
                     logger.warn("New receive buffer size ({}) is smaller than the number of messages pending ({}), ignoring resize request. Processor will be invalid.", newSize, msgPending);
                     return;
                 }
-                LinkedBlockingQueue<ReceivedMqttMessage> newBuffer = new LinkedBlockingQueue<>(newSize);
+                BlockingQueue<ReceivedMqttMessage> newBuffer = new LinkedBlockingQueue<>(newSize);
                 mqttQueue.drainTo(newBuffer);
                 mqttQueue = newBuffer;
             }
@@ -303,8 +302,8 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
     }
 
     @Override
-    public final List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return PROPERTIES;
+    public List<PropertyDescriptor> getSupportedPropertyDescriptors() {
+        return PROPERTY_DESCRIPTORS;
     }
 
     @Override
@@ -377,6 +376,13 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
         }
     }
 
+    @Override
+    public void migrateProperties(PropertyConfiguration config) {
+        super.migrateProperties(config);
+        config.renameProperty("Quality of Service(QoS)", PROP_QOS.getName());
+        config.renameProperty("add-attributes-as-fields", ADD_ATTRIBUTES_AS_FIELDS.getName());
+    }
+
     private void initializeClient(ProcessContext context) {
         // NOTE: This method is called when isConnected returns false which can happen when the client is null, or when it is
         // non-null but not connected, so we need to handle each case and only create a new client when it is null
@@ -443,13 +449,27 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
 
         final Map<String, String> attrs = new HashMap<>();
         attrs.put(BROKER_ATTRIBUTE_KEY, clientProperties.getRawBrokerUris());
-        attrs.put(TOPIC_ATTRIBUTE_KEY, mqttMessage.getTopic());
+        addTopicAttributes(attrs, mqttMessage.getTopic());
         attrs.put(QOS_ATTRIBUTE_KEY, String.valueOf(mqttMessage.getQos()));
         attrs.put(IS_DUPLICATE_ATTRIBUTE_KEY, String.valueOf(mqttMessage.isDuplicate()));
         attrs.put(IS_RETAINED_ATTRIBUTE_KEY, String.valueOf(mqttMessage.isRetained()));
 
         messageFlowfile = session.putAllAttributes(messageFlowfile, attrs);
         return messageFlowfile;
+    }
+
+    void addTopicAttributes(
+            final Map<String, String> attributes,
+            final String topic
+    ) {
+        attributes.put(TOPIC_ATTRIBUTE_KEY, topic);
+
+        if (topic != null && !topic.isEmpty()) {
+            final String[] segments = topic.split(TOPIC_SEPARATOR, -1);
+            for (int topicSegmentIndex = 0; topicSegmentIndex < segments.length; topicSegmentIndex++) {
+                attributes.put(TOPIC_SEGMENT_PREFIX + topicSegmentIndex, segments[topicSegmentIndex]);
+            }
+        }
     }
 
     private void transferQueueRecord(final ProcessContext context, final ProcessSession session) {
@@ -503,6 +523,7 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
                                         final List<RecordField> fields = new ArrayList<>(writeSchema.getFields());
 
                                         fields.add(new RecordField(TOPIC_FIELD_KEY, RecordFieldType.STRING.getDataType()));
+                                        fields.add(new RecordField(TOPIC_SEGMENTS_FIELD_KEY, RecordFieldType.ARRAY.getArrayDataType(RecordFieldType.STRING.getDataType())));
                                         fields.add(new RecordField(QOS_FIELD_KEY, RecordFieldType.INT.getDataType()));
                                         fields.add(new RecordField(IS_DUPLICATE_FIELD_KEY, RecordFieldType.BOOLEAN.getDataType()));
                                         fields.add(new RecordField(IS_RETAINED_FIELD_KEY, RecordFieldType.BOOLEAN.getDataType()));
@@ -521,7 +542,7 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
 
                             try {
                                 if (context.getProperty(ADD_ATTRIBUTES_AS_FIELDS).asBoolean()) {
-                                    record.setValue(TOPIC_FIELD_KEY, mqttMessage.getTopic());
+                                    addTopicFields(record, mqttMessage.getTopic());
                                     record.setValue(QOS_FIELD_KEY, mqttMessage.getQos());
                                     record.setValue(IS_RETAINED_FIELD_KEY, mqttMessage.isRetained());
                                     record.setValue(IS_DUPLICATE_FIELD_KEY, mqttMessage.isDuplicate());
@@ -592,6 +613,18 @@ public class ConsumeMQTT extends AbstractMQTTProcessor {
         final int count = recordCount.get();
         session.adjustCounter(COUNTER_RECORDS_PROCESSED, count, false);
         logger.info("Successfully processed {} records for {}", count, flowFile);
+    }
+
+    private void addTopicFields(
+            final Record record,
+            final String topic
+    ) {
+        record.setValue(TOPIC_FIELD_KEY, topic);
+
+        if (topic != null && !topic.isEmpty()) {
+            final String[] topicSegments = topic.split(TOPIC_SEPARATOR, -1);
+            record.setValue(TOPIC_SEGMENTS_FIELD_KEY, topicSegments);
+        }
     }
 
     private void closeWriter(final RecordSetWriter writer) {
