@@ -27,8 +27,10 @@ import org.apache.nifi.redis.RedisConnectionPool;
 import org.apache.nifi.redis.RedisType;
 import org.apache.nifi.ssl.SSLContextProvider;
 import org.apache.nifi.util.StringUtils;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.redis.connection.PoolException;
 import org.springframework.data.redis.connection.RedisClusterConfiguration;
 import org.springframework.data.redis.connection.RedisConfiguration;
 import org.springframework.data.redis.connection.RedisConnectionFactory;
@@ -42,33 +44,31 @@ import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.data.redis.serializer.RedisSerializer;
 import org.springframework.data.redis.stream.StreamMessageListenerContainer;
-import org.springframework.lang.Nullable;
-import redis.clients.jedis.JedisPoolConfig;
+import redis.clients.jedis.ConnectionPoolConfig;
 
-import javax.net.ssl.SSLContext;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import javax.net.ssl.SSLContext;
 
 public class RedisUtils {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(RedisUtils.class);
 
     // These properties are shared among the controller service(s) and processor(s) that use a RedisConnectionPool
+    public static final String OLD_REDIS_CONNECTION_POOL_PROPERTY_NAME = "redis-connection-pool";
+    public static final String OLD_TTL_PROPERTY_NAME = "redis-cache-ttl";
 
     public static final PropertyDescriptor REDIS_CONNECTION_POOL = new PropertyDescriptor.Builder()
-            .name("redis-connection-pool")
-            .displayName("Redis Connection Pool")
+            .name("Redis Connection Pool")
             .identifiesControllerService(RedisConnectionPool.class)
             .required(true)
             .build();
 
     public static final PropertyDescriptor TTL = new PropertyDescriptor.Builder()
-            .name("redis-cache-ttl")
-            .displayName("TTL")
+            .name("TTL")
             .description("Indicates how long the data should exist in Redis. Setting '0 secs' would mean the data would exist forever")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .required(true)
@@ -85,7 +85,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor REDIS_MODE = new PropertyDescriptor.Builder()
             .name("Redis Mode")
-            .displayName("Redis Mode")
             .description("The type of Redis being communicated with - standalone, sentinel, or clustered.")
             .allowableValues(REDIS_MODE_STANDALONE, REDIS_MODE_SENTINEL, REDIS_MODE_CLUSTER)
             .defaultValue(REDIS_MODE_STANDALONE.getValue())
@@ -95,7 +94,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor CONNECTION_STRING = new PropertyDescriptor.Builder()
             .name("Connection String")
-            .displayName("Connection String")
             .description("The connection string for Redis. In a standalone instance this value will be of the form hostname:port. " +
                     "In a sentinel instance this value will be the comma-separated list of sentinels, such as host1:port1,host2:port2,host3:port3. " +
                     "In a clustered instance this value will be the comma-separated list of cluster masters, such as host1:port,host2:port,host3:port.")
@@ -106,7 +104,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor DATABASE = new PropertyDescriptor.Builder()
             .name("Database Index")
-            .displayName("Database Index")
             .description("The database index to be used by connections created from this connection pool. " +
                     "See the databases property in redis.conf, by default databases 0-15 will be available.")
             .addValidator(StandardValidators.NON_NEGATIVE_INTEGER_VALIDATOR)
@@ -117,7 +114,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor COMMUNICATION_TIMEOUT = new PropertyDescriptor.Builder()
             .name("Communication Timeout")
-            .displayName("Communication Timeout")
             .description("The timeout to use when attempting to communicate with Redis.")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("10 seconds")
@@ -126,7 +122,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor CLUSTER_MAX_REDIRECTS = new PropertyDescriptor.Builder()
             .name("Cluster Max Redirects")
-            .displayName("Cluster Max Redirects")
             .description("The maximum number of redirects that can be performed when clustered.")
             .addValidator(StandardValidators.NON_NEGATIVE_INTEGER_VALIDATOR)
             .defaultValue("5")
@@ -135,7 +130,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor SENTINEL_MASTER = new PropertyDescriptor.Builder()
             .name("Sentinel Master")
-            .displayName("Sentinel Master")
             .description("The name of the sentinel master, require when Mode is set to Sentinel")
             .addValidator(StandardValidators.NON_BLANK_VALIDATOR)
             .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
@@ -150,7 +144,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor PASSWORD = new PropertyDescriptor.Builder()
             .name("Password")
-            .displayName("Password")
             .description("The password used to authenticate to the Redis server. See the 'requirepass' property in redis.conf.")
             .addValidator(StandardValidators.NON_BLANK_VALIDATOR)
             .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
@@ -166,7 +159,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor SENTINEL_PASSWORD = new PropertyDescriptor.Builder()
             .name("Sentinel Password")
-            .displayName("Sentinel Password")
             .description("The password used to authenticate to the Redis Sentinel server. See the 'requirepass' and 'sentinel sentinel-pass' properties in sentinel.conf.")
             .addValidator(StandardValidators.NON_BLANK_VALIDATOR)
             .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
@@ -175,7 +167,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_MAX_TOTAL = new PropertyDescriptor.Builder()
             .name("Pool - Max Total")
-            .displayName("Pool - Max Total")
             .description("The maximum number of connections that can be allocated by the pool (checked out to clients, or idle awaiting checkout). " +
                     "A negative value indicates that there is no limit.")
             .addValidator(StandardValidators.INTEGER_VALIDATOR)
@@ -185,7 +176,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_MAX_IDLE = new PropertyDescriptor.Builder()
             .name("Pool - Max Idle")
-            .displayName("Pool - Max Idle")
             .description("The maximum number of idle connections that can be held in the pool, or a negative value if there is no limit.")
             .addValidator(StandardValidators.INTEGER_VALIDATOR)
             .defaultValue("8")
@@ -194,7 +184,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_MIN_IDLE = new PropertyDescriptor.Builder()
             .name("Pool - Min Idle")
-            .displayName("Pool - Min Idle")
             .description("The target for the minimum number of idle connections to maintain in the pool. If the configured value of Min Idle is " +
                     "greater than the configured value for Max Idle, then the value of Max Idle will be used instead.")
             .addValidator(StandardValidators.INTEGER_VALIDATOR)
@@ -204,7 +193,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_BLOCK_WHEN_EXHAUSTED = new PropertyDescriptor.Builder()
             .name("Pool - Block When Exhausted")
-            .displayName("Pool - Block When Exhausted")
             .description("Whether or not clients should block and wait when trying to obtain a connection from the pool when the pool has no available connections. " +
                     "Setting this to false means an error will occur immediately when a client requests a connection and none are available.")
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
@@ -215,7 +203,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_MAX_WAIT_TIME = new PropertyDescriptor.Builder()
             .name("Pool - Max Wait Time")
-            .displayName("Pool - Max Wait Time")
             .description("The amount of time to wait for an available connection when Block When Exhausted is set to true.")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("10 seconds")
@@ -224,7 +211,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_MIN_EVICTABLE_IDLE_TIME = new PropertyDescriptor.Builder()
             .name("Pool - Min Evictable Idle Time")
-            .displayName("Pool - Min Evictable Idle Time")
             .description("The minimum amount of time an object may sit idle in the pool before it is eligible for eviction.")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("60 seconds")
@@ -233,7 +219,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_TIME_BETWEEN_EVICTION_RUNS = new PropertyDescriptor.Builder()
             .name("Pool - Time Between Eviction Runs")
-            .displayName("Pool - Time Between Eviction Runs")
             .description("The amount of time between attempting to evict idle connections from the pool.")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("30 seconds")
@@ -242,7 +227,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_NUM_TESTS_PER_EVICTION_RUN = new PropertyDescriptor.Builder()
             .name("Pool - Num Tests Per Eviction Run")
-            .displayName("Pool - Num Tests Per Eviction Run")
             .description("The number of connections to tests per eviction attempt. A negative value indicates to test all connections.")
             .addValidator(StandardValidators.INTEGER_VALIDATOR)
             .defaultValue("-1")
@@ -251,7 +235,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_TEST_ON_CREATE = new PropertyDescriptor.Builder()
             .name("Pool - Test On Create")
-            .displayName("Pool - Test On Create")
             .description("Whether or not connections should be tested upon creation.")
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .allowableValues("true", "false")
@@ -261,7 +244,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_TEST_ON_BORROW = new PropertyDescriptor.Builder()
             .name("Pool - Test On Borrow")
-            .displayName("Pool - Test On Borrow")
             .description("Whether or not connections should be tested upon borrowing from the pool.")
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .allowableValues("true", "false")
@@ -271,7 +253,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_TEST_ON_RETURN = new PropertyDescriptor.Builder()
             .name("Pool - Test On Return")
-            .displayName("Pool - Test On Return")
             .description("Whether or not connections should be tested upon returning to the pool.")
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .allowableValues("true", "false")
@@ -281,7 +262,6 @@ public class RedisUtils {
 
     public static final PropertyDescriptor POOL_TEST_WHILE_IDLE = new PropertyDescriptor.Builder()
             .name("Pool - Test While Idle")
-            .displayName("Pool - Test While Idle")
             .description("Whether or not connections should be tested while idle.")
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .allowableValues("true", "false")
@@ -291,41 +271,37 @@ public class RedisUtils {
 
     public static final PropertyDescriptor SSL_CONTEXT_SERVICE = new PropertyDescriptor.Builder()
             .name("SSL Context Service")
-            .displayName("SSL Context Service")
             .description("If specified, this service will be used to create an SSL Context that will be used "
                     + "to secure communications; if not specified, communications will not be secure")
             .required(false)
             .identifiesControllerService(SSLContextProvider.class)
             .build();
 
-    public static final List<PropertyDescriptor> REDIS_CONNECTION_PROPERTY_DESCRIPTORS;
-    static {
-        final List<PropertyDescriptor> props = new ArrayList<>();
-        props.add(RedisUtils.REDIS_MODE);
-        props.add(RedisUtils.CONNECTION_STRING);
-        props.add(RedisUtils.DATABASE);
-        props.add(RedisUtils.COMMUNICATION_TIMEOUT);
-        props.add(RedisUtils.CLUSTER_MAX_REDIRECTS);
-        props.add(RedisUtils.SENTINEL_MASTER);
-        props.add(RedisUtils.USERNAME);
-        props.add(RedisUtils.PASSWORD);
-        props.add(RedisUtils.SENTINEL_USERNAME);
-        props.add(RedisUtils.SENTINEL_PASSWORD);
-        props.add(RedisUtils.SSL_CONTEXT_SERVICE);
-        props.add(RedisUtils.POOL_MAX_TOTAL);
-        props.add(RedisUtils.POOL_MAX_IDLE);
-        props.add(RedisUtils.POOL_MIN_IDLE);
-        props.add(RedisUtils.POOL_BLOCK_WHEN_EXHAUSTED);
-        props.add(RedisUtils.POOL_MAX_WAIT_TIME);
-        props.add(RedisUtils.POOL_MIN_EVICTABLE_IDLE_TIME);
-        props.add(RedisUtils.POOL_TIME_BETWEEN_EVICTION_RUNS);
-        props.add(RedisUtils.POOL_NUM_TESTS_PER_EVICTION_RUN);
-        props.add(RedisUtils.POOL_TEST_ON_CREATE);
-        props.add(RedisUtils.POOL_TEST_ON_BORROW);
-        props.add(RedisUtils.POOL_TEST_ON_RETURN);
-        props.add(RedisUtils.POOL_TEST_WHILE_IDLE);
-        REDIS_CONNECTION_PROPERTY_DESCRIPTORS = Collections.unmodifiableList(props);
-    }
+    public static final List<PropertyDescriptor> REDIS_CONNECTION_PROPERTY_DESCRIPTORS = List.of(
+        RedisUtils.REDIS_MODE,
+        RedisUtils.CONNECTION_STRING,
+        RedisUtils.DATABASE,
+        RedisUtils.COMMUNICATION_TIMEOUT,
+        RedisUtils.CLUSTER_MAX_REDIRECTS,
+        RedisUtils.SENTINEL_MASTER,
+        RedisUtils.USERNAME,
+        RedisUtils.PASSWORD,
+        RedisUtils.SENTINEL_USERNAME,
+        RedisUtils.SENTINEL_PASSWORD,
+        RedisUtils.SSL_CONTEXT_SERVICE,
+        RedisUtils.POOL_MAX_TOTAL,
+        RedisUtils.POOL_MAX_IDLE,
+        RedisUtils.POOL_MIN_IDLE,
+        RedisUtils.POOL_BLOCK_WHEN_EXHAUSTED,
+        RedisUtils.POOL_MAX_WAIT_TIME,
+        RedisUtils.POOL_MIN_EVICTABLE_IDLE_TIME,
+        RedisUtils.POOL_TIME_BETWEEN_EVICTION_RUNS,
+        RedisUtils.POOL_NUM_TESTS_PER_EVICTION_RUN,
+        RedisUtils.POOL_TEST_ON_CREATE,
+        RedisUtils.POOL_TEST_ON_BORROW,
+        RedisUtils.POOL_TEST_ON_RETURN,
+        RedisUtils.POOL_TEST_WHILE_IDLE
+    );
 
     public static RedisConfig createRedisConfig(final PropertyContext context) {
         final RedisType redisType = RedisType.fromDisplayName(context.getProperty(RedisUtils.REDIS_MODE).getValue());
@@ -345,7 +321,7 @@ public class RedisUtils {
         redisConfig.setPoolMinIdle(context.getProperty(RedisUtils.POOL_MIN_IDLE).asInteger());
         redisConfig.setBlockWhenExhausted(context.getProperty(RedisUtils.POOL_BLOCK_WHEN_EXHAUSTED).asBoolean());
         redisConfig.setMaxWaitTime(Duration.ofMillis(context.getProperty(RedisUtils.POOL_MAX_WAIT_TIME).asTimePeriod(TimeUnit.MILLISECONDS)));
-        redisConfig.setMinEvictableIdleTime(Duration.ofMillis(context.getProperty(RedisUtils.POOL_MIN_EVICTABLE_IDLE_TIME).asTimePeriod(TimeUnit.MILLISECONDS)));
+        redisConfig.setMinEvictableIdleDuration(Duration.ofMillis(context.getProperty(RedisUtils.POOL_MIN_EVICTABLE_IDLE_TIME).asTimePeriod(TimeUnit.MILLISECONDS)));
         redisConfig.setTimeBetweenEvictionRuns(Duration.ofMillis(context.getProperty(RedisUtils.POOL_TIME_BETWEEN_EVICTION_RUNS).asTimePeriod(TimeUnit.MILLISECONDS)));
         redisConfig.setNumTestsPerEvictionRun(context.getProperty(RedisUtils.POOL_NUM_TESTS_PER_EVICTION_RUN).asInteger());
         redisConfig.setTestOnCreate(context.getProperty(RedisUtils.POOL_TEST_ON_CREATE).asBoolean());
@@ -368,7 +344,7 @@ public class RedisUtils {
         final String sentinelUsername = redisConfig.getSentinelUsername();
         final String sentinelPassword = redisConfig.getSentinelPassword();
         final Integer timeout = redisConfig.getTimeout();
-        final JedisPoolConfig poolConfig = createJedisPoolConfig(redisConfig);
+        final ConnectionPoolConfig poolConfig = createConnectionPoolConfig(redisConfig);
 
         JedisClientConfiguration.JedisClientConfigurationBuilder builder = JedisClientConfiguration.builder()
                 .connectTimeout(Duration.ofMillis(timeout))
@@ -429,7 +405,12 @@ public class RedisUtils {
         }
 
         // need to call this to initialize the pool/connections
-        connectionFactory.afterPropertiesSet();
+        try {
+            connectionFactory.afterPropertiesSet();
+        } catch (PoolException e) {
+            LOGGER.warn("Could not pre-warm Redis pool (no Redis running?) – will connect lazily", e);
+        }
+
         return connectionFactory;
     }
 
@@ -460,14 +441,14 @@ public class RedisUtils {
         }
     }
 
-    private static JedisPoolConfig createJedisPoolConfig(final RedisConfig redisConfig) {
-        final JedisPoolConfig poolConfig = new JedisPoolConfig();
+    private static ConnectionPoolConfig createConnectionPoolConfig(final RedisConfig redisConfig) {
+        final ConnectionPoolConfig poolConfig = new ConnectionPoolConfig();
         poolConfig.setMaxTotal(redisConfig.getPoolMaxTotal());
         poolConfig.setMaxIdle(redisConfig.getPoolMaxIdle());
         poolConfig.setMinIdle(redisConfig.getPoolMinIdle());
         poolConfig.setBlockWhenExhausted(redisConfig.getBlockWhenExhausted());
         poolConfig.setMaxWait(redisConfig.getMaxWaitTime());
-        poolConfig.setMinEvictableIdleTime(redisConfig.getMinEvictableIdleTime());
+        poolConfig.setMinEvictableIdleDuration(redisConfig.getMinEvictableIdleDuration());
         poolConfig.setTimeBetweenEvictionRuns(redisConfig.getTimeBetweenEvictionRuns());
         poolConfig.setNumTestsPerEvictionRun(redisConfig.getNumTestsPerEvictionRun());
         poolConfig.setTestOnCreate(redisConfig.getTestOnCreate());
