@@ -26,6 +26,7 @@ import org.apache.nifi.annotation.lifecycle.OnScheduled;
 import org.apache.nifi.components.AllowableValue;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.flowfile.FlowFile;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.Relationship;
@@ -41,9 +42,7 @@ import org.apache.nifi.snmp.validators.OIDValidator;
 import org.snmp4j.Target;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -83,8 +82,7 @@ public class GetSNMP extends AbstractSNMPProcessor {
                     "under the specified OID.");
 
     public static final PropertyDescriptor OID = new PropertyDescriptor.Builder()
-            .name("snmp-oid")
-            .displayName("OID")
+            .name("OID")
             .description("Each OID (object identifier) identifies a variable that can be read or set via SNMP." +
                     " This value is not taken into account for an input flowfile and will be omitted. Can be set to empty" +
                     "string when the OIDs are provided through flowfile.")
@@ -92,17 +90,15 @@ public class GetSNMP extends AbstractSNMPProcessor {
             .build();
 
     public static final PropertyDescriptor SNMP_STRATEGY = new PropertyDescriptor.Builder()
-            .name("snmp-strategy")
-            .displayName("SNMP Strategy")
+            .name("SNMP Strategy")
             .description("SNMP strategy to use (SNMP Get or SNMP Walk)")
             .required(true)
             .allowableValues(GET, WALK)
-            .defaultValue(GET.getValue())
+            .defaultValue(GET)
             .build();
 
     public static final PropertyDescriptor TEXTUAL_OID = new PropertyDescriptor.Builder()
-            .name("snmp-textual-oid")
-            .displayName("Textual OID")
+            .name("Textual OID")
             .description("The textual form of the numeric OID to request. This property is user defined, not processed and appended to " +
                     "the outgoing flowfile.")
             .required(false)
@@ -119,7 +115,7 @@ public class GetSNMP extends AbstractSNMPProcessor {
             .description("All FlowFiles that cannot received from the SNMP agent are routed to this relationship.")
             .build();
 
-    protected static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = Collections.unmodifiableList(Arrays.asList(
+    protected static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             AGENT_HOST,
             AGENT_PORT,
             BasicProperties.SNMP_VERSION,
@@ -135,12 +131,12 @@ public class GetSNMP extends AbstractSNMPProcessor {
             OID,
             TEXTUAL_OID,
             SNMP_STRATEGY
-    ));
+    );
 
-    private static final Set<Relationship> RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final Set<Relationship> RELATIONSHIPS = Set.of(
             REL_SUCCESS,
             REL_FAILURE
-    )));
+    );
 
     private volatile GetSNMPHandler snmpHandler;
 
@@ -169,6 +165,24 @@ public class GetSNMP extends AbstractSNMPProcessor {
         } else if (SNMPStrategy.WALK == snmpStrategy) {
             performSnmpWalk(context, processSession, oid, target, flowfile, isNewFlowFileCreated);
         }
+    }
+
+    @Override
+    public void migrateProperties(PropertyConfiguration config) {
+        super.migrateProperties(config);
+        config.renameProperty("snmp-oid", OID.getName());
+        config.renameProperty("snmp-strategy", SNMP_STRATEGY.getName());
+        config.renameProperty("snmp-textual-oid", TEXTUAL_OID.getName());
+        config.renameProperty(BasicProperties.OLD_SNMP_VERSION_PROPERTY_NAME, BasicProperties.SNMP_VERSION.getName());
+        config.renameProperty(BasicProperties.OLD_SNMP_COMMUNITY_PROPERTY_NAME, BasicProperties.SNMP_COMMUNITY.getName());
+        config.renameProperty(BasicProperties.OLD_SNMP_RETRIES_PROPERTY_NAME,  BasicProperties.SNMP_RETRIES.getName());
+        BasicProperties.OLD_SNMP_TIMEOUT_PROPERTY_NAMES.forEach(oldPropertyName -> config.renameProperty(oldPropertyName, BasicProperties.SNMP_TIMEOUT.getName()));
+        config.renameProperty(V3SecurityProperties.OLD_SNMP_SECURITY_LEVEL_PROPERTY_NAME, V3SecurityProperties.SNMP_SECURITY_LEVEL.getName());
+        config.renameProperty(V3SecurityProperties.OLD_SNMP_SECURITY_NAME_PROPERTY_NAME, V3SecurityProperties.SNMP_SECURITY_NAME.getName());
+        config.renameProperty(V3SecurityProperties.OLD_SNMP_AUTH_PROTOCOL_PROPERTY_NAME, V3SecurityProperties.SNMP_AUTH_PROTOCOL.getName());
+        config.renameProperty(V3SecurityProperties.OLD_SNMP_AUTH_PASSWORD_PROPERTY_NAME, V3SecurityProperties.SNMP_AUTH_PASSWORD.getName());
+        config.renameProperty(V3SecurityProperties.OLD_SNMP_PRIVACY_PROTOCOL_PROPERTY_NAME, V3SecurityProperties.SNMP_PRIVACY_PROTOCOL.getName());
+        config.renameProperty(V3SecurityProperties.OLD_SNMP_PRIVACY_PASSWORD_PROPERTY_NAME, V3SecurityProperties.SNMP_PRIVACY_PASSWORD.getName());
     }
 
     void performSnmpWalk(final ProcessContext context, final ProcessSession processSession, final String oid,
@@ -239,6 +253,7 @@ public class GetSNMP extends AbstractSNMPProcessor {
         return PROPERTY_DESCRIPTORS;
     }
 
+    @Override
     protected String getTargetHost(final ProcessContext processContext, final FlowFile flowFile) {
         return processContext.getProperty(AGENT_HOST).evaluateAttributeExpressions(flowFile).getValue();
     }
