@@ -23,13 +23,18 @@ import org.apache.nifi.annotation.documentation.CapabilityDescription;
 import org.apache.nifi.annotation.documentation.Tags;
 import org.apache.nifi.annotation.lifecycle.OnScheduled;
 import org.apache.nifi.annotation.lifecycle.OnStopped;
-import org.apache.nifi.components.AllowableValue;
 import org.apache.nifi.components.ConfigVerificationResult;
 import org.apache.nifi.components.PropertyDescriptor;
+import org.apache.nifi.components.listen.ListenComponent;
+import org.apache.nifi.components.listen.ListenPort;
+import org.apache.nifi.components.listen.StandardListenPort;
+import org.apache.nifi.components.listen.TransportProtocol;
 import org.apache.nifi.components.resource.ResourceCardinality;
 import org.apache.nifi.components.resource.ResourceType;
+import org.apache.nifi.controller.ConfigurationContext;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.processor.AbstractSessionFactoryProcessor;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSessionFactory;
@@ -40,6 +45,7 @@ import org.apache.nifi.processor.util.StandardValidators;
 import org.apache.nifi.snmp.configuration.SNMPConfiguration;
 import org.apache.nifi.snmp.operations.SNMPTrapReceiverHandler;
 import org.apache.nifi.snmp.processors.properties.BasicProperties;
+import org.apache.nifi.snmp.processors.properties.UsmUserInputMethod;
 import org.apache.nifi.snmp.processors.properties.V3SecurityProperties;
 import org.apache.nifi.snmp.utils.JsonFileUsmReader;
 import org.apache.nifi.snmp.utils.JsonUsmReader;
@@ -49,12 +55,13 @@ import org.apache.nifi.snmp.utils.UsmReader;
 import org.snmp4j.security.UsmUser;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+
+import static org.apache.nifi.snmp.processors.AbstractSNMPProcessor.getCommunity;
+import static org.apache.nifi.snmp.processors.AbstractSNMPProcessor.getSecurityLevel;
+import static org.apache.nifi.snmp.processors.properties.BasicProperties.SNMP_V3;
 
 /**
  * Receiving data from a configured SNMP agent which, upon each invocation of
@@ -68,60 +75,51 @@ import java.util.Set;
 @WritesAttribute(attribute = SNMPUtils.SNMP_PROP_PREFIX + "*", description = "Attributes retrieved from the SNMP response. It may include:"
         + " snmp$errorIndex, snmp$errorStatus, snmp$errorStatusText, snmp$nonRepeaters, snmp$requestID, snmp$type, snmp$variableBindings")
 @RequiresInstanceClassLoading
-public class ListenTrapSNMP extends AbstractSessionFactoryProcessor implements VerifiableProcessor {
-
-    public static final AllowableValue USM_JSON_FILE_PATH = new AllowableValue("usm-json-file-path", "Json File Path", "The path of the JSON file containing the USM users");
-    public static final AllowableValue USM_JSON_CONTENT = new AllowableValue("usm-json-content", "Json Content", "The JSON containing the USM users");
-    public static final AllowableValue USM_SECURITY_NAMES = new AllowableValue("usm-security-names", "Security Names", "In case of noAuthNoPriv security level" +
-            " - the list of security names separated by commas");
+public class ListenTrapSNMP extends AbstractSessionFactoryProcessor implements VerifiableProcessor, ListenComponent {
 
     public static final PropertyDescriptor SNMP_MANAGER_PORT = new PropertyDescriptor.Builder()
-            .name("snmp-manager-port")
-            .displayName("SNMP Manager Port")
+            .name("SNMP Manager Port")
             .description("The port where the SNMP Manager listens to the incoming traps.")
             .required(true)
             .addValidator(StandardValidators.PORT_VALIDATOR)
+            .identifiesListenPort(TransportProtocol.UDP, "snmptrap")
             .build();
 
-    public static final PropertyDescriptor SNMP_USM_USER_SOURCE = new PropertyDescriptor.Builder()
-            .name("snmp-usm-users-source")
-            .displayName("USM Users Source")
-            .description("The ways to provide USM User data")
+    public static final PropertyDescriptor SNMP_USM_USER_INPUT_METHOD = new PropertyDescriptor.Builder()
+            .name("USM Users Input Method")
+            .description("Specifies how USM user data is provided.")
             .required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
-            .allowableValues(USM_JSON_CONTENT, USM_JSON_FILE_PATH, USM_SECURITY_NAMES)
-            .dependsOn(BasicProperties.SNMP_VERSION, BasicProperties.SNMP_V3)
+            .allowableValues(UsmUserInputMethod.class)
+            .dependsOn(BasicProperties.SNMP_VERSION, SNMP_V3)
             .build();
 
     public static final PropertyDescriptor SNMP_USM_USERS_JSON_FILE_PATH = new PropertyDescriptor.Builder()
-            .name("snmp-usm-users-file-path")
-            .displayName("USM Users JSON File Path")
+            .name("USM Users JSON File Path")
             .description("The path of the json file containing the user credentials for SNMPv3. Check Usage for more details.")
             .required(false)
             .identifiesExternalResource(ResourceCardinality.SINGLE, ResourceType.FILE)
-            .dependsOn(BasicProperties.SNMP_VERSION, BasicProperties.SNMP_V3)
-            .dependsOn(SNMP_USM_USER_SOURCE, USM_JSON_FILE_PATH)
+            .dependsOn(BasicProperties.SNMP_VERSION, SNMP_V3)
+            .dependsOn(SNMP_USM_USER_INPUT_METHOD, UsmUserInputMethod.USM_JSON_FILE_PATH)
             .build();
 
     public static final PropertyDescriptor SNMP_USM_USERS_JSON = new PropertyDescriptor.Builder()
-            .name("snmp-usm-users-json-content")
-            .displayName("USM Users JSON content")
+            .name("USM Users JSON Content")
             .description("The JSON containing the user credentials for SNMPv3. Check Usage for more details.")
             .required(false)
             .sensitive(true)
-            .dependsOn(BasicProperties.SNMP_VERSION, BasicProperties.SNMP_V3)
-            .dependsOn(SNMP_USM_USER_SOURCE, USM_JSON_CONTENT)
+            .dependsOn(BasicProperties.SNMP_VERSION, SNMP_V3)
+            .dependsOn(SNMP_USM_USER_INPUT_METHOD, UsmUserInputMethod.USM_JSON_CONTENT)
             .addValidator(JsonValidator.INSTANCE)
             .build();
 
     public static final PropertyDescriptor SNMP_USM_SECURITY_NAMES = new PropertyDescriptor.Builder()
-            .name("snmp-usm-security-names")
-            .displayName("SNMP Users Security Names")
+            .name("SNMP Users Security Names")
             .description("Security names listed separated by commas in SNMPv3. Check Usage for more details.")
             .required(false)
-            .dependsOn(BasicProperties.SNMP_VERSION, BasicProperties.SNMP_V3)
+            .dependsOn(BasicProperties.SNMP_VERSION, SNMP_V3)
             .dependsOn(V3SecurityProperties.SNMP_SECURITY_LEVEL, V3SecurityProperties.NO_AUTH_NO_PRIV)
-            .dependsOn(SNMP_USM_USER_SOURCE, USM_SECURITY_NAMES)
+            .dependsOn(SNMP_USM_USER_INPUT_METHOD, UsmUserInputMethod.USM_SECURITY_NAMES)
             .addValidator(StandardValidators.NON_BLANK_VALIDATOR)
             .build();
 
@@ -135,21 +133,26 @@ public class ListenTrapSNMP extends AbstractSessionFactoryProcessor implements V
             .description("All FlowFiles that cannot received from the SNMP agent are routed to this relationship")
             .build();
 
-    protected static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = Collections.unmodifiableList(Arrays.asList(
+    protected static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             SNMP_MANAGER_PORT,
             BasicProperties.SNMP_VERSION,
             BasicProperties.SNMP_COMMUNITY,
             V3SecurityProperties.SNMP_SECURITY_LEVEL,
-            SNMP_USM_USER_SOURCE,
+            SNMP_USM_USER_INPUT_METHOD,
             SNMP_USM_USERS_JSON_FILE_PATH,
             SNMP_USM_USERS_JSON,
             SNMP_USM_SECURITY_NAMES
-    ));
+    );
 
-    private static final Set<Relationship> RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final List<String> OBSOLETE_SNMP_USM_USERS_JSON_PROPERTY_NAMES = List.of(
+            "snmp-usm-users-json-content",
+            "USM Users JSON content"
+    );
+
+    private static final Set<Relationship> RELATIONSHIPS = Set.of(
             REL_SUCCESS,
             REL_FAILURE
-    )));
+    );
 
     private volatile SNMPTrapReceiverHandler snmpTrapReceiverHandler;
     private volatile List<UsmUser> usmUsers;
@@ -159,15 +162,13 @@ public class ListenTrapSNMP extends AbstractSessionFactoryProcessor implements V
     public List<ConfigVerificationResult> verify(ProcessContext context, ComponentLog verificationLogger, Map<String, String> attributes) {
         final List<ConfigVerificationResult> results = new ArrayList<>();
 
-        final String usmUserSource = context.getProperty(SNMP_USM_USER_SOURCE).getValue();
+        final String snmpVersion = context.getProperty(BasicProperties.SNMP_VERSION).getValue();
 
-        if (usmUserSource != null) {
-            final UsmReader usmReader = getUsmReader(context, usmUserSource);
+        if (snmpVersion.equals(SNMP_V3.getValue())) {
+            final UsmUserInputMethod usmUserInputMethod = context.getProperty(SNMP_USM_USER_INPUT_METHOD).asAllowableValue(UsmUserInputMethod.class);
 
             try {
-                if (usmReader != null) {
-                    usmReader.readUsm();
-                }
+                getUsmReader(context, usmUserInputMethod).readUsm();
             } catch (Exception e) {
                 results.add(new ConfigVerificationResult.Builder()
                         .verificationStepName("USM User processing")
@@ -176,32 +177,26 @@ public class ListenTrapSNMP extends AbstractSessionFactoryProcessor implements V
                         .build());
             }
         }
+
         return results;
     }
 
     @OnScheduled
     public void initSnmpManager(ProcessContext context) {
-        final int version = SNMPUtils.getVersion(context.getProperty(BasicProperties.SNMP_VERSION).getValue());
-        final int managerPort = context.getProperty(SNMP_MANAGER_PORT).asInteger();
-        final String securityLevel = context.getProperty(V3SecurityProperties.SNMP_SECURITY_LEVEL).getValue();
+        final String snmpVersion = context.getProperty(BasicProperties.SNMP_VERSION).getValue();
+        final String securityLevel = getSecurityLevel(context, snmpVersion);
 
-        SNMPConfiguration configuration;
-
-        configuration = SNMPConfiguration.builder()
-                .setManagerPort(managerPort)
-                .setVersion(version)
+        final SNMPConfiguration configuration = SNMPConfiguration.builder()
+                .setManagerPort(context.getProperty(SNMP_MANAGER_PORT).asInteger())
+                .setVersion(SNMPUtils.getVersion(snmpVersion))
                 .setSecurityLevel(securityLevel)
-                .setCommunityString(context.getProperty(BasicProperties.SNMP_COMMUNITY).getValue())
+                .setCommunityString(getCommunity(context, snmpVersion))
                 .build();
 
-        final String usmUserSource = context.getProperty(SNMP_USM_USER_SOURCE).getValue();
+        if (snmpVersion.equals(SNMP_V3.getValue())) {
+            final UsmUserInputMethod usmUserInputMethod = context.getProperty(SNMP_USM_USER_INPUT_METHOD).asAllowableValue(UsmUserInputMethod.class);
 
-        if (usmUserSource != null) {
-            final UsmReader usmReader = getUsmReader(context, usmUserSource);
-            if (usmReader != null) {
-                usmUsers = usmReader.readUsm();
-            }
-
+            usmUsers = getUsmReader(context, usmUserInputMethod).readUsm();
         }
 
         snmpTrapReceiverHandler = new SNMPTrapReceiverHandler(configuration, usmUsers);
@@ -213,6 +208,24 @@ public class ListenTrapSNMP extends AbstractSessionFactoryProcessor implements V
         }
 
         return snmpTrapReceiverHandler.getListeningPort();
+    }
+
+    @Override
+    public List<ListenPort> getListenPorts(final ConfigurationContext context) {
+        final Integer portNumber = context.getProperty(SNMP_MANAGER_PORT).asInteger();
+        final List<ListenPort> ports;
+        if (portNumber == null) {
+            ports = List.of();
+        } else {
+            final ListenPort port = StandardListenPort.builder()
+                .portNumber(portNumber)
+                .portName(SNMP_MANAGER_PORT.getDisplayName())
+                .transportProtocol(TransportProtocol.UDP)
+                .applicationProtocols(List.of("snmptrap"))
+                .build();
+            ports = List.of(port);
+        }
+        return ports;
     }
 
     @Override
@@ -236,24 +249,28 @@ public class ListenTrapSNMP extends AbstractSessionFactoryProcessor implements V
     }
 
     @Override
+    public void migrateProperties(PropertyConfiguration config) {
+        config.renameProperty("snmp-manager-port", SNMP_MANAGER_PORT.getName());
+        config.renameProperty("snmp-usm-users-source", SNMP_USM_USER_INPUT_METHOD.getName());
+        config.renameProperty("snmp-usm-users-file-path", SNMP_USM_USERS_JSON_FILE_PATH.getName());
+        OBSOLETE_SNMP_USM_USERS_JSON_PROPERTY_NAMES.forEach(obsoletePropertyName -> config.renameProperty(obsoletePropertyName, SNMP_USM_USERS_JSON.getName()));
+        config.renameProperty("snmp-usm-security-names", SNMP_USM_SECURITY_NAMES.getName());
+        config.renameProperty(BasicProperties.OLD_SNMP_VERSION_PROPERTY_NAME, BasicProperties.SNMP_VERSION.getName());
+        config.renameProperty(BasicProperties.OLD_SNMP_COMMUNITY_PROPERTY_NAME, BasicProperties.SNMP_COMMUNITY.getName());
+        config.renameProperty(V3SecurityProperties.OLD_SNMP_SECURITY_LEVEL_PROPERTY_NAME, V3SecurityProperties.SNMP_SECURITY_LEVEL.getName());
+
+    }
+
+    @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
         return PROPERTY_DESCRIPTORS;
     }
 
-    private UsmReader getUsmReader(ProcessContext context, String usmUserSource) {
-        final String usmUsersJsonFilePath = context.getProperty(SNMP_USM_USERS_JSON_FILE_PATH).getValue();
-        final String usmUsersJson = context.getProperty(SNMP_USM_USERS_JSON).getValue();
-        final String usmSecurityNames = context.getProperty(SNMP_USM_SECURITY_NAMES).getValue();
-
-        UsmReader usmReader = null;
-
-        if (USM_JSON_FILE_PATH.getValue().equals(usmUserSource)) {
-            usmReader = new JsonFileUsmReader(usmUsersJsonFilePath);
-        } else if (USM_JSON_CONTENT.getValue().equals(usmUserSource)) {
-            usmReader = new JsonUsmReader(usmUsersJson);
-        } else if (USM_SECURITY_NAMES.getValue().equals(usmUserSource)) {
-            usmReader = new SecurityNamesUsmReader(usmSecurityNames);
-        }
-        return usmReader;
+    private UsmReader getUsmReader(ProcessContext context, UsmUserInputMethod usmUserInputMethod) {
+        return switch (usmUserInputMethod) {
+            case USM_JSON_FILE_PATH -> new JsonFileUsmReader(context.getProperty(SNMP_USM_USERS_JSON_FILE_PATH).getValue());
+            case USM_JSON_CONTENT -> new JsonUsmReader(context.getProperty(SNMP_USM_USERS_JSON).getValue());
+            case USM_SECURITY_NAMES -> new SecurityNamesUsmReader(context.getProperty(SNMP_USM_SECURITY_NAMES).getValue());
+        };
     }
 }
