@@ -18,6 +18,8 @@ package org.apache.nifi.snmp.operations;
 
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.processor.ProcessSessionFactory;
+import org.apache.nifi.snmp.helper.configurations.SNMPConfigurationFactory;
+import org.apache.nifi.snmp.helper.configurations.SNMPV1V2cConfigurationFactory;
 import org.apache.nifi.snmp.processors.ListenTrapSNMP;
 import org.apache.nifi.util.LogMessage;
 import org.apache.nifi.util.MockComponentLog;
@@ -29,6 +31,7 @@ import org.junit.jupiter.api.Test;
 import org.snmp4j.CommandResponderEvent;
 import org.snmp4j.PDU;
 import org.snmp4j.PDUv1;
+import org.snmp4j.mp.SnmpConstants;
 import org.snmp4j.smi.Address;
 import org.snmp4j.smi.OID;
 import org.snmp4j.smi.VariableBinding;
@@ -39,6 +42,7 @@ import java.util.concurrent.atomic.AtomicLong;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -53,13 +57,16 @@ class SNMPTrapReceiverTest {
     private PDU mockPdu;
     private SNMPTrapReceiver snmpTrapReceiver;
 
+    private static final SNMPConfigurationFactory snmpV1ConfigurationFactory = new SNMPV1V2cConfigurationFactory(SnmpConstants.version1);
+
 
     @BeforeEach
     public void init() {
         mockProcessSessionFactory = mock(ProcessSessionFactory.class);
         mockComponentLog = new MockComponentLog("componentId", MOCK_COMPONENT_ID);
         mockPdu = mock(PDU.class);
-        snmpTrapReceiver = new SNMPTrapReceiver(mockProcessSessionFactory, mockComponentLog);
+        snmpTrapReceiver = new SNMPTrapReceiver(mockProcessSessionFactory, snmpV1ConfigurationFactory.createSnmpListenTrapConfig(0), mockComponentLog);
+
         final ListenTrapSNMP listenTrapSNMP = new ListenTrapSNMP();
         mockProcessSession = new MockProcessSession(new SharedSessionState(listenTrapSNMP, new AtomicLong(0L)), listenTrapSNMP);
     }
@@ -70,7 +77,7 @@ class SNMPTrapReceiverTest {
 
         snmpTrapReceiver.processPdu(mockEvent);
 
-        final LogMessage logMessage = mockComponentLog.getErrorMessages().get(0);
+        final LogMessage logMessage = mockComponentLog.getErrorMessages().getFirst();
 
         assertEquals(String.format("%s Request timed out or parameters are incorrect.", MOCK_COMPONENT_ID), logMessage.getMsg());
     }
@@ -83,7 +90,7 @@ class SNMPTrapReceiverTest {
         when(mockEvent.getPDU()).thenReturn(mockPdu);
         snmpTrapReceiver.processPdu(mockEvent);
 
-        final LogMessage logMessage = mockComponentLog.getErrorMessages().get(0);
+        final LogMessage logMessage = mockComponentLog.getErrorMessages().getFirst();
 
         assertEquals(String.format("%s Request timed out or parameters are incorrect.", MOCK_COMPONENT_ID), logMessage.getMsg());
     }
@@ -101,7 +108,7 @@ class SNMPTrapReceiverTest {
         when(mockAddress.toString()).thenReturn("127.0.0.1/62");
         when(mockAddress.isValid()).thenReturn(true);
 
-        final Vector<VariableBinding> vbs = new Vector<>();
+        final List<VariableBinding> vbs = new Vector<>();
         doReturn(vbs).when(mockV1Pdu).getVariableBindings();
         when(mockEvent.getPDU()).thenReturn(mockV1Pdu);
         when(mockEvent.getPeerAddress()).thenReturn(mockAddress);
@@ -110,7 +117,7 @@ class SNMPTrapReceiverTest {
         snmpTrapReceiver.processPdu(mockEvent);
 
         final List<MockFlowFile> flowFiles = mockProcessSession.getFlowFilesForRelationship(ListenTrapSNMP.REL_SUCCESS);
-        final FlowFile flowFile = flowFiles.get(0);
+        final FlowFile flowFile = flowFiles.getFirst();
 
         assertEquals("1.3.6.1.2.1.1.1.0", flowFile.getAttribute("snmp$enterprise"));
         assertEquals(String.valueOf(4), flowFile.getAttribute("snmp$specificTrapType"));
@@ -125,7 +132,7 @@ class SNMPTrapReceiverTest {
         when(mockPdu.getType()).thenReturn(PDU.TRAP);
         when(mockPdu.getErrorIndex()).thenReturn(123);
         when(mockPdu.getErrorStatusText()).thenReturn("test error status text");
-        final Vector<VariableBinding> vbs = new Vector<>();
+        final List<VariableBinding> vbs = new Vector<>();
 
         final Address mockAddress = mock(Address.class);
         when(mockAddress.toString()).thenReturn("127.0.0.1/62");
@@ -140,7 +147,7 @@ class SNMPTrapReceiverTest {
         snmpTrapReceiver.processPdu(mockEvent);
 
         final List<MockFlowFile> flowFiles = mockProcessSession.getFlowFilesForRelationship(ListenTrapSNMP.REL_SUCCESS);
-        final FlowFile flowFile = flowFiles.get(0);
+        final FlowFile flowFile = flowFiles.getFirst();
 
         assertEquals(String.valueOf(123), flowFile.getAttribute("snmp$errorIndex"));
         assertEquals("test error status text", flowFile.getAttribute("snmp$errorStatusText"));
@@ -157,7 +164,7 @@ class SNMPTrapReceiverTest {
         final Address mockAddress = mock(Address.class);
         when(mockAddress.isValid()).thenReturn(false);
 
-        final Vector<VariableBinding> vbs = new Vector<>();
+        final List<VariableBinding> vbs = new Vector<>();
         doReturn(vbs).when(mockPdu).getVariableBindings();
         when(mockEvent.getPDU()).thenReturn(mockPdu);
         when(mockEvent.getPeerAddress()).thenReturn(mockAddress);
@@ -168,9 +175,9 @@ class SNMPTrapReceiverTest {
         final List<MockFlowFile> flowFiles = mockProcessSession.getFlowFilesForRelationship(ListenTrapSNMP.REL_FAILURE);
 
         assertFalse(flowFiles.isEmpty());
-        final FlowFile flowFile = flowFiles.get(0);
+        final FlowFile flowFile = flowFiles.getFirst();
 
         assertEquals(String.valueOf(PDU.badValue), flowFile.getAttribute("snmp$errorStatus"));
-        assertEquals(null, flowFile.getAttribute("snmp$peerAddress"));
+        assertNull(flowFile.getAttribute("snmp$peerAddress"));
     }
 }
