@@ -21,6 +21,7 @@ import org.apache.nifi.flowfile.attributes.StandardFlowFileMediaType;
 import org.apache.nifi.util.FlowFileUnpackager;
 import org.apache.nifi.util.FlowFileUnpackagerV3;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.Assertions;
@@ -32,6 +33,8 @@ import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 public class TestPackageFlowFile {
 
     private static final String SAMPLE_CONTENT = "Hello, World!";
@@ -40,9 +43,10 @@ public class TestPackageFlowFile {
     private static final String EXTRA_ATTR_KEY = "myAttribute";
     private static final String EXTRA_ATTR_VALUE = "my value";
 
+    private final TestRunner runner = TestRunners.newTestRunner(new PackageFlowFile());
+
     @Test
     public void testOne() throws IOException {
-        TestRunner runner = TestRunners.newTestRunner(new PackageFlowFile());
         Map<String, String> attributes = new HashMap<>();
         attributes.put(CoreAttributes.FILENAME.key(), SAMPLE_ATTR_FILENAME);
         attributes.put(CoreAttributes.MIME_TYPE.key(), SAMPLE_ATTR_MIME_TYPE);
@@ -53,7 +57,7 @@ public class TestPackageFlowFile {
 
         runner.assertTransferCount(PackageFlowFile.REL_SUCCESS, 1);
         runner.assertTransferCount(PackageFlowFile.REL_ORIGINAL, 1);
-        final MockFlowFile outputFlowFile = runner.getFlowFilesForRelationship(PackageFlowFile.REL_SUCCESS).get(0);
+        final MockFlowFile outputFlowFile = runner.getFlowFilesForRelationship(PackageFlowFile.REL_SUCCESS).getFirst();
 
         // mime.type has changed
         Assertions.assertEquals(StandardFlowFileMediaType.VERSION_3.getMediaType(),
@@ -79,7 +83,6 @@ public class TestPackageFlowFile {
     @Test
     public void testMany() throws IOException {
         int FILE_COUNT = 10;
-        TestRunner runner = TestRunners.newTestRunner(new PackageFlowFile());
         runner.setProperty(PackageFlowFile.BATCH_SIZE, Integer.toString(FILE_COUNT));
         Map<String, String> attributes = new HashMap<>();
         attributes.put(CoreAttributes.MIME_TYPE.key(), SAMPLE_ATTR_MIME_TYPE);
@@ -92,7 +95,7 @@ public class TestPackageFlowFile {
 
         runner.assertTransferCount(PackageFlowFile.REL_SUCCESS, 1);
         runner.assertTransferCount(PackageFlowFile.REL_ORIGINAL, FILE_COUNT);
-        final MockFlowFile outputFlowFile = runner.getFlowFilesForRelationship(PackageFlowFile.REL_SUCCESS).get(0);
+        final MockFlowFile outputFlowFile = runner.getFlowFilesForRelationship(PackageFlowFile.REL_SUCCESS).getFirst();
 
         // mime.type has changed
         Assertions.assertEquals(StandardFlowFileMediaType.VERSION_3.getMediaType(),
@@ -118,10 +121,9 @@ public class TestPackageFlowFile {
     }
 
     @Test
-    public void testBatchSize() throws IOException {
+    public void testBatchSize() {
         int FILE_COUNT = 10;
         int BATCH_SIZE = 2;
-        TestRunner runner = TestRunners.newTestRunner(new PackageFlowFile());
         runner.setProperty(PackageFlowFile.BATCH_SIZE, Integer.toString(BATCH_SIZE));
         Map<String, String> attributes = new HashMap<>();
         attributes.put(CoreAttributes.MIME_TYPE.key(), SAMPLE_ATTR_MIME_TYPE);
@@ -135,5 +137,33 @@ public class TestPackageFlowFile {
         runner.assertTransferCount(PackageFlowFile.REL_SUCCESS, 1);
         runner.assertTransferCount(PackageFlowFile.REL_ORIGINAL, BATCH_SIZE);
         runner.assertQueueNotEmpty();
+    }
+
+    @Test
+    public void testBatchContentSize() {
+        int FILE_COUNT = 10;
+        int BATCH_CONTENT_SIZE = 7 * SAMPLE_CONTENT.length();
+        runner.setProperty(PackageFlowFile.BATCH_SIZE, Integer.toString(FILE_COUNT));
+        runner.setProperty(PackageFlowFile.BATCH_CONTENT_SIZE, BATCH_CONTENT_SIZE + " B");
+        Map<String, String> attributes = new HashMap<>();
+        attributes.put(CoreAttributes.MIME_TYPE.key(), SAMPLE_ATTR_MIME_TYPE);
+
+        for (int i = 0; i < FILE_COUNT; i++) {
+            attributes.put(CoreAttributes.FILENAME.key(), i + SAMPLE_ATTR_FILENAME);
+            runner.enqueue(SAMPLE_CONTENT, attributes);
+        }
+        runner.run();
+
+        runner.assertTransferCount(PackageFlowFile.REL_SUCCESS, 1);
+        runner.assertTransferCount(PackageFlowFile.REL_ORIGINAL, 7);
+        runner.assertQueueNotEmpty();
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.of("max-batch-size", PackageFlowFile.BATCH_SIZE.getName());
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 }
