@@ -16,16 +16,6 @@
  */
 package org.apache.nifi.csv;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.Reader;
-import java.io.UnsupportedEncodingException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
@@ -33,6 +23,15 @@ import org.apache.commons.io.input.BOMInputStream;
 import org.apache.nifi.context.PropertyContext;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.schema.inference.RecordSource;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.Reader;
+import java.io.UnsupportedEncodingException;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 
 public class CSVRecordSource implements RecordSource<CSVRecordAndFieldNames> {
     private final Iterator<CSVRecord> csvRecordIterator;
@@ -48,9 +47,12 @@ public class CSVRecordSource implements RecordSource<CSVRecordAndFieldNames> {
             throw new ProcessException(e);
         }
 
-        final CSVFormat csvFormat = CSVUtils.createCSVFormat(context, variables).builder().setHeader().setSkipHeaderRecord(true).setTrim(true).build();
-        final CSVParser csvParser = new CSVParser(reader, csvFormat);
-        fieldNames = Collections.unmodifiableList(new ArrayList<>(csvParser.getHeaderMap().keySet()));
+        final CSVFormat csvFormat = CSVUtils.createCSVFormat(context, variables).builder().setHeader().setSkipHeaderRecord(true).setTrim(true).get();
+        final CSVParser csvParser = CSVParser.builder()
+                .setReader(reader)
+                .setFormat(csvFormat)
+                .get();
+        fieldNames = List.copyOf(csvParser.getHeaderMap().keySet());
 
         csvRecordIterator = csvParser.iterator();
     }
