@@ -34,6 +34,7 @@ import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.processor.AbstractSessionFactoryProcessor;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
@@ -49,16 +50,12 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
-
 
 @InputRequirement(InputRequirement.Requirement.INPUT_FORBIDDEN)
 @Tags({"ingest", "event", "windows"})
@@ -74,8 +71,7 @@ public class ConsumeWindowsEventLog extends AbstractSessionFactoryProcessor {
     public static final int DEFAULT_MAX_QUEUE_SIZE = 1024;
 
     public static final PropertyDescriptor CHANNEL = new PropertyDescriptor.Builder()
-            .name("channel")
-            .displayName("Channel")
+            .name("Channel")
             .required(true)
             .defaultValue(DEFAULT_CHANNEL)
             .description("The Windows Event Log Channel to listen to.")
@@ -84,8 +80,7 @@ public class ConsumeWindowsEventLog extends AbstractSessionFactoryProcessor {
             .build();
 
     public static final PropertyDescriptor QUERY = new PropertyDescriptor.Builder()
-            .name("query")
-            .displayName("XPath Query")
+            .name("XPath Query")
             .required(true)
             .defaultValue(DEFAULT_XPATH)
             .description("XPath Query to filter events. (See https://msdn.microsoft.com/en-us/library/windows/desktop/dd996910(v=vs.85).aspx for examples.)")
@@ -94,8 +89,7 @@ public class ConsumeWindowsEventLog extends AbstractSessionFactoryProcessor {
             .build();
 
     public static final PropertyDescriptor MAX_BUFFER_SIZE = new PropertyDescriptor.Builder()
-            .name("maxBuffer")
-            .displayName("Maximum Buffer Size")
+            .name("Maximum Buffer Size")
             .required(true)
             .defaultValue(Integer.toString(DEFAULT_MAX_BUFFER))
             .description("The individual Event Log XMLs are rendered to a buffer." +
@@ -104,8 +98,7 @@ public class ConsumeWindowsEventLog extends AbstractSessionFactoryProcessor {
             .build();
 
     public static final PropertyDescriptor MAX_EVENT_QUEUE_SIZE = new PropertyDescriptor.Builder()
-            .name("maxQueue")
-            .displayName("Maximum queue size")
+            .name("Maximum Queue Size")
             .required(true)
             .defaultValue(Integer.toString(DEFAULT_MAX_QUEUE_SIZE))
             .description("Events are received asynchronously and must be output as FlowFiles when the processor is triggered." +
@@ -114,8 +107,7 @@ public class ConsumeWindowsEventLog extends AbstractSessionFactoryProcessor {
             .build();
 
     public static final PropertyDescriptor INACTIVE_DURATION_TO_RECONNECT = new PropertyDescriptor.Builder()
-            .name("inactiveDurationToReconnect")
-            .displayName("Inactive duration to reconnect")
+            .name("Inactive Duration to Reconnect")
             .description("If no new event logs are processed for the specified time period," +
                     " this processor will try reconnecting to recover from a state where any further messages cannot be consumed." +
                     " Such situation can happen if Windows Event Log service is restarted, or ERROR_EVT_QUERY_RESULT_STALE (15011) is returned." +
@@ -126,15 +118,22 @@ public class ConsumeWindowsEventLog extends AbstractSessionFactoryProcessor {
             .addValidator(StandardValidators.createTimePeriodValidator(0, TimeUnit.MILLISECONDS, Long.MAX_VALUE, TimeUnit.MILLISECONDS))
             .build();
 
-    public static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = Collections.unmodifiableList(
-            Arrays.asList(CHANNEL, QUERY, MAX_BUFFER_SIZE, MAX_EVENT_QUEUE_SIZE, INACTIVE_DURATION_TO_RECONNECT));
+    public static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
+            CHANNEL,
+            QUERY,
+            MAX_BUFFER_SIZE,
+            MAX_EVENT_QUEUE_SIZE,
+            INACTIVE_DURATION_TO_RECONNECT);
 
     public static final Relationship REL_SUCCESS = new Relationship.Builder()
             .name("success")
             .description("Relationship for successfully consumed events.")
             .build();
 
-    public static final Set<Relationship> RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(REL_SUCCESS)));
+    public static final Set<Relationship> RELATIONSHIPS = Set.of(
+            REL_SUCCESS
+    );
+
     public static final String APPLICATION_XML = "application/xml";
     public static final String UNABLE_TO_SUBSCRIBE = "Unable to subscribe with provided parameters, received the following error code: ";
     public static final String PROCESSOR_ALREADY_SUBSCRIBED = "Processor already subscribed to Event Log, expected cleanup to unsubscribe.";
@@ -179,6 +178,15 @@ public class ConsumeWindowsEventLog extends AbstractSessionFactoryProcessor {
             // Won't be able to use the processor anyway because native libraries didn't load
             name = null;
         }
+    }
+
+    @Override
+    public void migrateProperties(PropertyConfiguration config) {
+        config.renameProperty("channel", CHANNEL.getName());
+        config.renameProperty("query", QUERY.getName());
+        config.renameProperty("maxBuffer", MAX_BUFFER_SIZE.getName());
+        config.renameProperty("maxQueue", MAX_EVENT_QUEUE_SIZE.getName());
+        config.renameProperty("inactiveDurationToReconnect", INACTIVE_DURATION_TO_RECONNECT.getName());
     }
 
     private WEvtApi loadWEvtApi() {
