@@ -17,10 +17,10 @@
 
 package org.apache.nifi.controller.serialization;
 
+import org.w3c.dom.Element;
+
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
-import org.w3c.dom.Element;
 
 /**
  * Provides a mechanism for interpreting the version of the encoding scheme that was used to serialize
@@ -81,7 +81,7 @@ public class FlowEncodingVersion {
      *             version is not an integer, or if either the major or minor version is less than 0.
      */
     public static FlowEncodingVersion parse(final String version) {
-        if (version == null || version.trim().isEmpty()) {
+        if (version == null || version.isBlank()) {
             return null;
         }
 
